--- a/Styles/Sidebar.css
+++ b/Styles/Sidebar.css
@@ -7,14 +7,11 @@
     background-color: rgb(15, 15, 15);
     display: flex;
     justify-content: center;
-
+    z-index: 5000;
+    /* opacity: 1; */
+    /* height: 1000px; */
 }
 
-@media (max-width: 790px){
-    .sidebar{
-        opacity: 0;
-    }
-}
 
 .Sidebar-Button{
     display: flex;
@@ -142,11 +139,48 @@
     margin-left: 2.4px;
     padding-right: 8.5px;
     padding-top: 6.5px;
+    margin-top: -21px;
 }
 
 .Library-button:hover{
     background-color: rgb(45, 45, 45);
     cursor: pointer;
+}
+
+.History-button{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    width: 205px;
+    background-color: rgb(15, 15, 15);
+    border: none;
+    border-radius: 9.8px;    
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 6px;
+    margin-left: 2.4px;
+    padding-right: 8.5px;
+    padding-top: 6.5px;
+    opacity: 0;
+}
+
+.History-button:hover{
+    background-color: rgb(45, 45, 45);
+    cursor: pointer;
+}
+
+.History-icon{
+    height: 24px;
+    width: 25px;
+    padding-left: 2px;
+    margin-bottom: 6.7px;
+}
+
+.History-text{
+    font-size: 10px;
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
 }
 
 .Library-icon{
@@ -162,4 +196,653 @@
     color: white;
     padding-left: 2.5px;
     font-family: Roboto;
+}
+
+.Watch-later-button{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    width: 205px;
+    background-color: rgb(15, 15, 15);
+    border: none;
+    border-radius: 9.8px;    
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 6px;
+    margin-left: 2.4px;
+    padding-right: 8.5px;
+    padding-top: 6.5px;
+    opacity: 0;
+}
+
+.Watch-later-button:hover{
+    background-color: rgb(45, 45, 45);
+    cursor: pointer;
+}
+
+.Watch-later-icon{
+    height: 23px;
+    width: 21px;
+    padding-left: 3.5px;
+    margin-bottom: 6.67px;
+}
+
+.Watch-later-text{
+    font-size: 10px;
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;    
+}
+
+.Liked-videos-button{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    width: 205px;
+    background-color: rgb(15, 15, 15);
+    border: none;
+    border-radius: 9.8px;    
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 6px;
+    margin-left: 2.4px;
+    padding-right: 8.5px;
+    padding-top: 6.5px;
+    /* opacity: 0; */
+}
+
+.Liked-videos-button:hover{
+    background-color: rgb(45, 45, 45);
+    cursor: pointer;
+}
+
+.Liked-videos-icon{
+    height: 22px;
+    width: 22.5px;
+    padding-left: 3.5px;
+    margin-bottom: 6.67px;
+    filter: saturate(1000);
+}
+
+.Liked-videos-text{
+    font-size: 10px;
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto; 
+}
+
+.sidebar-hr{
+    height: 0.5px;
+    margin-top: 13px;
+    margin-left: 2px;
+    margin-right: -10px;
+    opacity: 0;
+}
+
+.sidebar-hr-setting-to-feedback{
+    height: 0.5px;
+    margin-top: 13px;
+    margin-left: 2px;
+    margin-right: -10px;
+    margin-bottom: 12.5px;
+    /* opacity: 0; */
+}
+
+.Subscription-sidebar-text{
+    color: white;
+    font: Roboto, Arial;
+    font-size: 14;
+    margin-top: 18px;
+    margin-left: 14px;
+    margin-bottom: 6px;
+}
+
+.Subscribed{
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    width: 205px;
+    background-color: rgb(15, 15, 15);
+    border: none;
+    border-radius: 9.8px;    
+    justify-content: left;
+    align-items: center;
+    padding-bottom: 6px;
+    margin-left: 2.4px;
+    padding-right: 8.5px;
+    padding-top: 6.5px;
+    /* margin-top: 6px; */
+}
+
+.Subscribed:hover{
+    background-color: rgb(45, 45, 45);
+    cursor: pointer;
+}
+
+.Subscribed-to{
+    width: 25px;
+    height: 25px;
+    border-radius: 20px;
+    margin-left: 5px;
+}
+
+.Subscribed-name{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 21px;
+    margin-bottom: 3px;
+    
+
+}
+
+.Show-more-subscribers{
+    width: 45px;
+    height: 45px;
+    border-radius: 20px;
+    margin-left: -5px; 
+}
+
+.Show-more-subscribers-text{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 10px;
+    margin-bottom: 3px;
+}
+
+.Explore-Icons{
+    width: 19px;
+    height: 22.31px;
+    /* border-radius: 20px; */
+    margin-left: 7px;
+}
+
+.Explore-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 24.5px;
+    margin-bottom: 3px;
+}
+
+.Music-Icons{
+    width: 17px;
+    height: 20.31px;
+    /* border-radius: 20px; */
+    margin-left: 7.8px;
+}
+
+.Music-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 26px;
+    margin-bottom: 3px;
+}
+
+.Movies-Icons{
+    width: 23px;
+    height: 23px;
+    /* border-radius: 20px; */
+    margin-left: 5.5px;    
+}
+
+.Movies-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 22px;
+    margin-bottom: 3px;
+}
+
+.Gaming-Icons{
+    width: 23px;
+    height: 19px;
+    /* border-radius: 20px; */
+    margin-left: 5.5px;  
+}
+
+.Gaming-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 21.5px;
+    margin-bottom: 3px;
+}
+
+.News-Icons{
+    width: 20.5px;
+    height: 19.5px;
+    /* border-radius: 20px; */
+    margin-left: 6px;
+}
+
+.News-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 24px;
+    margin-bottom: 3px;
+}
+
+.Sports-Icons{
+    width: 21.5px;
+    height: 25.23px;
+    /* border-radius: 20px; */
+    margin-left: 5.8px;  
+}
+
+.Sports-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 23px;
+    margin-bottom: 3px;
+}
+
+.FashionandBeauty-Icons{
+    width: 21px;
+    height: 25px;
+    /* border-radius: 20px; */
+    margin-left: 5.5px;  
+}
+
+.FashionandBeauty-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 24px;
+    margin-bottom: 3px;    
+}
+
+.Youtube-Icon{
+    width: 25px;
+    height: 26px;
+    /* border-radius: 20px; */
+    margin-left: 4.2px;
+}
+
+.Youtube-Premium-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 21px;
+    margin-bottom: 0.7px; 
+}
+
+.Youtube-Music{
+    width: 20px;
+    height: 20px;
+    /* border-radius: 20px; */
+    margin-left: 7px;
+}
+
+.Youtube-Kids{
+    width: 25.6px;
+    height: 24.5px;
+    /* border-radius: 20px; */
+    margin-left: 5px;    
+}
+
+.Youtube-Kids-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 20.5px;
+    margin-bottom: 3px;      
+}
+
+.Settings-icon{
+    width: 22.8px;
+    height: 22.8px;
+    /* border-radius: 20px; */
+    margin-left: 6px;
+    margin-bottom: 2px; 
+}
+
+.Settings-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 22px;
+    margin-bottom: 3px;    
+}
+
+.Report-icon{
+    width: 18px;
+    height: 20px;
+    /* border-radius: 20px; */
+    margin-left: 9px;
+}
+
+.Help-Icon{
+    width: 23.9px;
+    height: 23px;
+    /* border-radius: 20px; */
+    margin-left: 5px;
+}
+
+.Help-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 22px;
+    margin-bottom: 3px;    
+}
+
+.Feedback-Icon{
+    width: 19.5px;
+    height: 22.5px;
+    /* border-radius: 20px; */
+    margin-left: 7px; 
+}
+
+.Feedback-Texts{
+    font-size: 14px;
+    /* font-weight: 500; */
+    color: white;
+    padding-left: 2.5px;
+    font-family: Roboto;
+    margin-left: 23.5px;
+    margin-bottom: 3px;
+}
+
+.more-information-sidebar{
+    color: rgb(170, 170, 170);
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 13px;
+    margin-top:1px;
+    margin-bottom: 9.5px;
+    text-decoration: none;
+    margin-right: 4px;
+}
+
+.more-information-sidebar-line{
+    margin-left: 14px;
+    margin-top: 15px;
+}
+
+.more-information-sidebar-another-line{
+    margin-left: 14px;
+    margin-top: -2px;
+}
+
+.Google-LLC{
+    font-weight: 400;
+    color: #717171;
+    font-size: 12px;
+    margin-left: 14px;
+    margin-top: 15px;
+}
+
+@media (max-width: 790px){
+    .sidebar{
+        opacity: 0;
+    }
+
+    .History-button,
+    .Watch-later-button,
+    .Liked-videos-button,
+    .Subscribed,
+    .sidebar-hr,
+    .Subscription-sidebar-text,
+    .sidebar-hr-setting-to-feedback,
+    .more-information-sidebar-line,
+    .more-information-sidebar-another-line,
+    .Google-LLC{
+	    opacity: 0;
+    }
+}
+
+@media (min-width: 791px) and (max-width: 884px){
+    .History-button,
+    .Watch-later-button,
+    .Liked-videos-button,
+    .Subscribed,
+    .sidebar-hr,
+    .Subscription-sidebar-text,
+    .sidebar-hr-setting-to-feedback,
+    .more-information-sidebar-line,
+    .more-information-sidebar-another-line,
+    .Google-LLC{
+	    opacity: 0;
+    }    
+
+    .sidebar{
+        opacity: 1;
+    }
+}
+
+@media (min-width: 885px) and (max-width: 1280px){
+    .History-button,
+    .Watch-later-button,
+    .Liked-videos-button,
+    .Subscribed,
+    .sidebar-hr,
+    .Subscription-sidebar-text,
+    .sidebar-hr-setting-to-feedback,
+    .more-information-sidebar-line,
+    .more-information-sidebar-another-line,
+    .Google-LLC{
+	    opacity: 0;
+    }    
+}
+
+@media (min-width: 1315px) and (max-width: 1639px){
+    .sidebar-hr{
+        opacity: 1;
+    }
+    
+    .idk{
+        width: 200px;
+        padding-top: 7px;
+        padding-left: 10px;
+    
+    }
+
+    .Sidebar-Button{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+        padding-left: 10px;
+        padding-top: 18px;
+        width: 205px;
+        height: 40px;
+    }
+
+    .Sidebar-text{
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 21px;
+        margin-bottom: 8px;
+    }
+
+    .sidebar{
+        margin-left: 1px;
+        width: 225px;
+        overflow-x:scroll;
+        padding-right: 13px;
+        float: left;
+        
+    }
+
+
+
+    .sidebar::-webkit-scrollbar-corner { 
+        display: none; 
+        pointer-events: none;
+        /* position: fixed; */
+        /* opacity: none; */
+    }
+
+    /* .sidebar::-webkit-scrollbar{
+        display: none;
+        
+
+    } */
+
+    
+
+    .sidebar::-webkit-scrollbar:hover{
+        display: block;
+        cursor: pointer;
+    }
+
+    .Shorts-Button{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+        padding-left: 13.5px;
+        padding-top: 16.7px;
+        width: 205px;
+        height: 40px;
+    }
+
+    .Shorts-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 25.5px;
+        margin-bottom: 11px;
+    }
+
+    .Sidebar-Button{
+        background-color: #282828;
+    }
+
+    .Subscription-button{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+        padding-left: 9px;
+        padding-top: 9px;
+        width: 205px;
+        height: 40px;        
+    }
+
+    .Subscription-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 22.5px;
+        margin-bottom: 10px;
+    }
+
+    .Library-button{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: left;
+        padding-left: 9px;
+        padding-top: 12px;
+        width: 205px;
+        height: 40px;
+        margin-top: 12px;        
+    }
+
+    .Library-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 21.7px;
+        margin-bottom: 7px;
+    }
+
+    .History-button{
+        justify-content: left;
+        padding-left: 9px;
+        padding-top: 12px;
+        width: 205px;
+        height: 40px; 
+        opacity: 1;
+    }
+
+    .History-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 21.7px;
+        margin-bottom: 7px;
+    }
+
+    .Watch-later-button{
+        justify-content: left;
+        padding-left: 9px;
+        padding-top: 12px;
+        width: 205px;
+        height: 40px; 
+        opacity: 1;
+    }
+
+    .Watch-later-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 23.7px;
+        margin-bottom: 7px;
+    }
+
+    .Liked-videos-button{
+        justify-content: left;
+        padding-left: 9px;
+        padding-top: 12px;
+        width: 205px;
+        height: 40px; 
+        opacity: 1;        
+    }    
+
+    .Liked-videos-text{
+        font-size: 14px;
+        /* font-weight: 500; */
+        color: white;
+        padding-left: 2.5px;
+        font-family: Roboto;
+        margin-left: 21.7px;
+        margin-bottom: 7px;
+    }
+
 }
