--- a/Styles/Video Section.css
+++ b/Styles/Video Section.css
@@ -1,84 +1,31 @@
 .Grid{
     margin-top: 135px;
-    margin-left: 88px;
+    /* margin-left: 88px; */
     grid-template-columns: 1fr 1fr 1fr 1fr;    
     column-gap: 17px;
     row-gap: 15px;
     display: grid;
     padding-right: 17px;
     margin-bottom: 8px;
+    /* opacity: 0; */
 }
 
-@media (max-width: 885px){
-    .Grid{ 
-        grid-template-columns: 1fr 1fr;
-        margin-left: 15px;
-        font-size: 30;
-    }
-
-    .shorts-more{
-        opacity: 0;
-        pointer-events: none;
-        position: absolute;
-    }
-
-    .Padding_for_button{
-        opacity: 0;
-    }
-
-    .filled_shorts{
-        margin-left: 15px;
-    }
-}
-
-@media (max-width: 885px){
-    .Shorts-section-content{
-        margin-left: 0px;
-    }
-
-    
-}
-
-
-@media (max-width: 885px){
-    Title{
-        font-size: 50px;
-    }
+.Content{
+    color: white;
+    margin-top: 120px;
+    margin-left: 500px;
+    margin-bottom: -120px;
 }
 
 hr {
     height: 4.5px; 
     background-color: rgb(65, 65, 65); 
     border: none; 
-    margin-left:88.5px;
+    /* margin-left:88.5px; */
     margin-right: 16px;
     margin-top: 1px;
     border-top: rgb(65, 65, 65);
 }
-
-@media (max-width: 885px){
-    hr{
-        margin-left: 16px;
-    }
-}
-
-
-
-@media (min-width: 886px) and (max-width: 1279px){
-    .Grid,
-    .another_grid{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media (min-width: 1280px){
-    .Grid,
-    .another_grid{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-
-}
-
 
 .Vid-box{
     display: inline-block;
@@ -256,7 +203,7 @@ hr {
 .filled_shorts{
     height: 20px;
     width: 15.7px;
-    margin-left: 103px;
+    /* margin-left: 103px; */
     margin-top: 24px;
 }
 
@@ -330,7 +277,7 @@ hr {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     padding-top: 23px;
-    padding-left: 87.8px;
+    /* padding-left: 87.8px; */
     margin-bottom: 20px;
     column-gap: 17.5px;
     padding-right: 15px;
@@ -341,7 +288,7 @@ hr {
     .Shorts-section-content{
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr;
-        padding-left: 15px;
+        /* padding-left: 15px; */
     }
 }
 
@@ -425,7 +372,7 @@ hr {
 
 .shorts-more{
     /* margin-left: 85px; */
-    margin-right: 100px;
+    /* margin-right: 100px; */
     background-color: rgb(15, 15, 15);
     display: block;
     width: 100%;
@@ -475,10 +422,10 @@ hr {
 }
 
 .another_grid{
-    margin-left: 88px;
+    /* margin-left: 88px; */
     margin-top: 40px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     column-gap: 17px;
     row-gap: 15px;    
     padding-right: 17px;
@@ -681,7 +628,7 @@ hr {
 
 .Post{
     margin-top: 35px;
-    margin-left: 95px;
+    /* margin-left: 95px; */
     font-size: 20px;
     color: white;
     
@@ -698,9 +645,9 @@ hr {
 
 .YT-Post-section{
     margin-top: 35px;
-    margin-left: 88px;  
+    /* margin-left: 88px;   */
     display: grid;
-    grid-template-columns: 273px 273px 273px;  
+    /* grid-template-columns: 1fr 1fr 1fr 1fr;   */
     grid-template-rows: 153px 153px 153px;
     column-gap: 17px;
 }
@@ -919,4 +866,211 @@ hr {
 .External-link:visited{
     text-decoration: none;
     color: rgb(62, 166, 255);
+}
+
+@media (max-width: 790px){
+    .Post{
+        margin-left: 28px;
+    }
+
+    .filled_shorts{
+        margin-left: 28px;
+    }
+
+    .Grid{ 
+        grid-template-columns: 1fr 1fr;
+        margin-left: 15px;
+        font-size: 30;
+    }
+
+    .another_grid{
+        margin-left: 15px;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .YT-Post-section{
+        margin-left: 15px;
+        grid-template-columns: 1fr 1fr;
+        margin-right: 16px;
+    }
+
+    .Shorts-section-content{
+        padding-left: 15px;
+    }
+
+    hr{
+        margin-left: 16px;
+    }
+
+}
+
+@media (min-width: 791px) and (max-width: 884px){
+    .Post{
+        margin-left: 95px;
+    }
+    
+    hr{
+        margin-left: 88.5px;
+    }
+
+    .filled_shorts{
+        margin-left: 95px;
+    }
+
+    .Grid{ 
+        grid-template-columns: 1fr 1fr;
+        margin-left: 88px;
+        font-size: 30;
+    }
+
+    .another_grid{
+        margin-left: 88px;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .YT-Post-section{
+        margin-left: 88px;
+        grid-template-columns: 1fr 1fr;
+        margin-right: 15.8px;
+    }
+
+    .Shorts-section-content{
+        padding-left: 87.8px;
+    }
+}
+
+@media (min-width: 885px) and (max-width: 1280px){
+    .Post{
+        margin-left: 95px;
+    }
+
+    .filled_shorts{
+        margin-left: 95px;
+    }
+
+    .Grid{
+        margin-left: 88px;
+    }
+
+    .another_grid{
+        margin-left: 88px;
+    }
+
+    .YT-Post-section{
+        margin-left: 88px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        margin-right: 15.8px;
+    }
+
+    .Shorts-section-content{
+        padding-left: 87.8px;
+    }
+}
+
+@media (max-width: 885px){
+    .shorts-more{
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+    }
+
+    .Padding_for_button{
+        opacity: 0;
+    }
+
+    
+
+
+}
+
+@media (max-width: 885px){
+    .Shorts-section-content{
+        margin-left: 0px;
+    }
+
+    
+}
+
+
+@media (max-width: 885px){
+    Title{
+        font-size: 50px;
+    }
+}
+
+@media (min-width: 886px) and (max-width: 1314px){
+    .Grid,
+    .another_grid{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .YT-Post-section{
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-left: 88px;
+        margin-right: 15.8px;
+    }
+
+    hr{
+        margin-left: 88.5px;
+    }
+
+}
+
+@media (min-width: 1280px){
+    .Grid,
+    .another_grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    .YT-Post-section{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        margin-left: 88px;
+        margin-right: 15.8px;
+    }
+
+}
+
+@media(min-width: 1315px) and (max-width: 1639px){
+    .Grid,
+    .another_grid{
+        margin-left: 255px;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-left: 260px;
+    }
+
+    hr{
+        margin-left: 260px;
+    }
+
+    .Shorts-section-content{
+        padding-left: 255px;
+    }
+
+    /* .shorts-more{
+        margin-left: 175px;
+        margin-right: -200px;
+    } */
+
+    .filled_shorts{
+        margin-left: 260px;
+    }
+
+    .Title,
+    .vid_box_lower_right_title{
+        font-size: 16px;
+    }
+
+    .Channel_name,
+    .vid_box_channel_and_views,
+    .Views-and-date,
+    .vid_box_views_and_date{
+        font-size: 14px;
+    }
+
+    .YT-Post-section{
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-left: 255px;
+        margin-right: 15.8px;
+    }
+
 }
